--- a/semisupervisedFramework/semisupervisedFramework.csproj
+++ b/semisupervisedFramework/semisupervisedFramework.csproj
@@ -4,8 +4,12 @@
     <AzureFunctionsVersion>v2</AzureFunctionsVersion>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.Storage" Version="3.0.4" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.28" />
   </ItemGroup>
+  	<ItemGroup>
+		<PackageReference Include="Microsoft.Azure.Storage.DataMovement" Version="0.6.2" />
+		</ItemGroup>
   <ItemGroup>
     <None Update="host.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
