--- a/semisupervisedFramework/semisupervisedFramework.csproj
+++ b/semisupervisedFramework/semisupervisedFramework.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="Microsoft.Azure.Management.CognitiveServices" Version="5.1.0" />
     <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.Storage" Version="3.0.6" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.29" />
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="System.Security.Permissions" Version="4.5.0" />
     <PackageReference Include="Universal.Microsoft.Azure.Storage.Blob" Version="1.0.0" />
     <PackageReference Include="WindowsAzure.Storage" Version="9.3.3" />
