--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,10 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+
+# Azure Functions artifacts
+bin 
+obj 
+local.settings.json 
+.python_packages 
+semisupervisedFramework.zip 
